--- a/css/main-style.css
+++ b/css/main-style.css
@@ -3,8 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
-    background-color: rgb(145, 145, 145)5a5;
-
+    /* background-color: rgb(145, 145, 145); */
 }
 
 /* EN EL HEADER */
@@ -19,6 +18,7 @@
     width: 100%;
 
 }
+
 .logoTitulo {
     display: flex;
     justify-content: center;
@@ -27,30 +27,27 @@
     color: darkblue;
     height: 10vh;
     width: 100%;
-    background-clip: url(../img/ikusmira.png);
+   
 }
 
 .nav-principal {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    
+  position: sticky;
+   
     background-color: rgb(145, 145, 145);
     color: darkblue;
     font-weight: 200;
     font-size: large;
     height: 10vh;
     width: 100%;
-    ul{
-        display: flex;
-        li{
-            list-style: none;
-        }
-    }
+
 }
-.menu{
+
+.menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color: rgb(145, 145, 145);
     color: darkblue;
@@ -59,54 +56,58 @@
     height: 10vh;
     width: 100%;
     background-color: aqua;
+  
 
-    ul{
+    li {
+        list-style: none;
         display: flex;
-       justify-content: center;
+        justify-content: center;
         flex-flow: column;
+        width: fit-content;
 
-        li{
+    }
+
+}
+
+/* .submenu-menu{display: none;}
+
+.submenu1_submenu-menu{display: none;} */
+.pie {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+}
+
+.section3-pie {
+    display: flex;
+    justify-content: center;
+    flex-flow: column;
+
+    ul {
+        display: flex;
+
+        li {
             list-style: none;
         }
     }
 }
-/* .submenu-menu{display: none;}
 
-.submenu1_submenu-menu{display: none;} */
+.section4-pie {
+    display: flex;
+    justify-content: center;
+    flex-flow: row;
+
+    form {
+        display: flex;
+        flex-flow: column;
+    }
+}
+
 i {
     cursor: pointer;
     font-size: x-large;
     color: darkblue;
     font-weight: 200;
 
-}
-
-.pie{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: center;
-    align-items: center;
-}
-.section3-pie{
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-
-    ul{
-        display: flex;
-
-        li{
-            list-style: none;
-        }
-    }
-}
-.section4-pie{
-    display: flex;
-    justify-content: center;
-    flex-flow: row;
-
-    form{
-        display: flex;
-        flex-flow: column;
-    }
 }
